# smart-file-manager

./: .gitignore  README.md  package.json
src/: App.css  App.tsx  helpers.ts  icons.tsx  types.ts
src-tauri/: 2  Cargo.toml  package-lock.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src-tauri/src/: main.rs
src-tauri/vault_data_db/: db  snap.0000000000004DCF
src/components/: ContextMenu.tsx  FileGrid.tsx  Modals.tsx  PropertiesPanel.tsx  Sidebar.tsx  Toolbar.tsx
src/views/: DuplicatesView.tsx  HistoryView.tsx  SmartDedupView.tsx  SnapshotsView.tsx  TimelineView.tsx
