[package]
name = "smart-file-manager"
version = "0.1.0"
description = "Smart File Manager with CAS engine"
authors = []
edition = "2021"

[lib]
name = "smart_file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-shell   = "2"
tauri-plugin-dialog  = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
sled           = "0.34"
blake3         = "1"
walkdir        = "2"
opener = "0.8"
zip            = "2"
trash          = "5"

# Perceptual hashing — decode images and resize for DCT pHash
image          = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }

[profile.release]
panic         = "abort"
codegen-units = 1
opt-level     = "s"
lto           = true
strip         = true
